--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,195 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+.App-header {
+  background-color: #f3f8ff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.flex-1{
+  flex: 1;
+}
+.ms-3{
+  margin-left: 1rem;
+}
+.text-center{
+  text-align: center;
+}
+.cursor-pointer{
+  cursor: pointer;
+}
+.inner-container{
+  max-width: 1000px;
+  margin-inline: auto;
+}
+.max-width-300{
+  max-width: 300px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-shrink-0{
+  flex-shrink: 0;
 }
+.App-link {
+  color: #61dafb;
+}  
+.d-block{
+  display: block;
+}
+input, select{
+  min-height: 45px;
+}
+button{
+  min-height: 45px;
+  font-size: 1rem;
+}
+.w-100{
+  width: 100%;
+}
+.text-white{
+  color: #fff;
+}
+.m-0{
+  margin: 0
+}
+.mt-0{
+  margin-top: 0
+}
+.mt-3{
+  margin-top: 1rem;
+}
+.me-3{
+  margin-right: 1rem;
+}
+.gap-10{
+  gap: 10px;
+}
+.justify-content-between{
+  justify-content: space-between;
+}
+.justify-content-end{
+  justify-content: end;
+}
+.fs-12{
+  font-size: 12px;
+}
+.ant-select-selector{
+  height: 45px !important;
+}
+.ant-select-selection-item{
+  padding-top: 5px !important;
+}
+table th{
+  white-space: nowrap;
+}
+.ant-modal .ant-modal-title{
+  font-size: 2rem;
+}
+.py-3{
+  padding-block: 1rem;
+}
+.pb-3{
+  padding-bottom: 1rem;
+}
+.pt-3{
+  padding-top: 1rem;
+}
+.fs-18{
+  font-size: 18px;
+}
+.d-none{
+  display: none;
+}
+.mb-3{
+  margin-bottom: 1rem;
+}
+.mb-5{
+  margin-bottom: 50px;
+}
+.mb-10px{
+  margin-bottom: 10px;
+}
+.mb-25px{
+  margin-bottom: 25px;
+}
+.ant-menu{
+  flex: 1;
+  justify-content: flex-end;
+}
+.mt-8{
+  margin-top: 8px;
+}
+hr{
+  background-color: #eee !important;
+  border: 1px solid #ddd;
+}
+.show-ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  padding-left: 0;
+}
+.blue-clr{
+  color: #1890ff
+}
+
+.max-width-600{
+  max-width: 600px;
+}
+.mx-auto{
+  margin-inline: auto;
+}
+.px-3{
+  padding-inline: 1rem;
+}
+
+.loader-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.35);
+  z-index: 9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite; 
+  animation: spin 2s linear infinite;
+}
+.ant-table-content{
+  overflow-y: auto;
+  width: 100%;
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+  @media screen and (min-width: 768px){
+  .site-layout{
+    padding: 0 50px;
+  }
+  .show-details{
+    margin-left: 1rem;
+  }
+  .main-area.mw-500{
+    width: 500px;
+  }
+} 
